jpms: added --add-export